<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/purple"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre4"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <!--ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/home"
                android:contentDescription="@string/home"
                android:layout_gravity="start"/-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_etudiant"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="5dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="30"
                android:textSize="15sp"
                android:hint="@string/hint_mes"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_margin="5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_fem"
            android:textColor="@color/black"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_hom"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ceci est un bouton Radio"
            android:textColor="@color/bleu"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/texton"
            android:textOff="Off"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt"
            android:entries="@array/listePromo"/>
        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <DatePicker
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.25"/>
        <AnalogClock
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
        <DigitalClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>