<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoinsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/calcul"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre2"
            android:textSize="30sp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="60dp"/>


        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"
            android:textColor="#B500FF"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"
            android:textColor="#B500FF"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moins"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginVertical="20dp"/>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:text="0"/>


    </LinearLayout>



</RelativeLayout>