<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/labelNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelnom"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/labelPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelprenom"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/labelTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labeltel"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>