<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/titre1"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/choice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/titre3"
            android:textColor="#808080"
            android:textSize="20sp" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:columnCount="2"
            android:gravity="center"
            android:rowCount="2">

            <!-- Carte 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/plus"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="10dp">

                <!-- Contenu de la carte -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/plus"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Carte 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/moins"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="10dp">

                <!-- Contenu de la carte -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/moins"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Carte 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fois"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="10dp">

                <!-- Contenu de la carte -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fois"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="X"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Carte 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/devise"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="10dp">

                <!-- Contenu de la carte -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/devise"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="/"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>
</RelativeLayout>
